--- a/Track the Trackers/popup.html
+++ b/Track the Trackers/popup.html
@@ -7,37 +7,47 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <title>Track the Trackers</title>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <script src="popup.js"></script>
+    <script src="popup.js" async></script>
 </head>
 
 <body>
-    <h2>Current site trackers</h2>
-    <div>
-        <ul>
-            <!-- tracking or not-tracking -->
-            <li id="zoom">Zoom:</li>
-            <li id="google-analytics">Google Analytics:</li>
-            <li id="twitter">Twitter:</li>
-            <li id="aliexpress">Aliexpress:</li>
-            <li id="linkedin">LinkedIn:</li>
-        </ul>
-    </div>
-    <!-- history of the trackers visit -->
-    <h2>History of the trackers visit</h2>
-    <div class="trackers-history">
-        <div><button type="button" class="btn btn-primary">Zoom</button></div>
-        <div><button type="button" class="btn btn-secondary">Google Analytics</button></div>
-        <div><button type="button" class="btn btn-success">Twitter</button></div>
-        <div><button type="button" class="btn btn-danger">Aliexpress</button></div>
-        <div><button type="button" class="btn btn-warning">LinkedIn</button></div>
-    </div>
-    <!-- <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script> -->
-    <!-- <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-        crossorigin="anonymous"></script> -->
-    <!-- <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script> -->
+    <h2 class="mainTitle">Track The Trackers</h2>
+    <h1 class="subTitle">Current site trackers</h2>
+        <div>
+            <ul>
+                <!-- tracking or not-tracking -->
+                <li id="zoom" class="trackers">Zoom:</li>
+                <li id="google_analytics" class="trackers">Google Analytics:</li>
+                <li id="facebook" class="trackers">Facebook:</li>
+                <li id="aliexpress" class="trackers">Aliexpress:</li>
+                <li id="linkedIn" class="trackers">LinkedIn:</li>
+            </ul>
+        </div>
+        <!-- history of the trackers visit -->
+        <h1 class="subTitle"> History of the trackers visit</h2>
+            <div class="trackers-history">
+                <button class="accordion">Zoom</button>
+                <div class="panel">
+                    <ul id="zoom_history"></ul>
+                </div>
+                <button class="accordion">Google Analytics</button>
+                <div class="panel">
+                    <ul id="google_analytics_history">
+                    </ul>
+                </div>
+                <button class="accordion">Facebook</button>
+                <div class="panel">
+                    <ul id="facebook_history"> </ul>
+                </div>
+                <button class="accordion">Aliexpress</button>
+                <div class="panel">
+                    <ul id="aliexpress_history"></ul>
+                </div>
+                <button class="accordion">LinkedIn</button>
+                <div class="panel">
+                    <ul id="linkedIn_history"></ul>
+                </div>
+            </div>
 </body>
 <footer>
 
