Finish the extension

--- a/Track the Trackers/popup.html
+++ b/Track the Trackers/popup.html
@@ -5,26 +5,27 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Track the Trackers</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <script src="popup.js" async></script>
 </head>
 
-<body>
-    <h2 class="mainTitle">Track The Trackers</h2>
+<body id="wrapper">
+    <h2 class="mainTitle">Track The Trackers 🧐</h2>
     <h1 class="subTitle">Current site trackers</h2>
         <div>
             <ul>
                 <!-- tracking or not-tracking -->
-                <li id="zoom" class="trackers">Zoom:</li>
-                <li id="google_analytics" class="trackers">Google Analytics:</li>
-                <li id="facebook" class="trackers">Facebook:</li>
-                <li id="aliexpress" class="trackers">Aliexpress:</li>
-                <li id="linkedIn" class="trackers">LinkedIn:</li>
+                <li id="zoom" class="trackers">&nbsp; <img src="https://i.imgur.com/xLUhmk5.png" width="20" height="20"> Zoom: </li>
+                <li id="google_analytics" class="trackers">&nbsp; <i class="fa fa-google"></i>&nbsp;&nbsp;Google Analytics:</li>
+                <li id="facebook" class="trackers">&nbsp;&nbsp;<i class="fa fa-facebook"></i>&nbsp;&nbsp;&nbsp; Facebook:</li>
+                <li id="aliexpress" class="trackers">&nbsp;<img src="https://i.imgur.com/zF5Rq9D.png" width="20" height="20"> &nbsp;Aliexpress:</li>
+                <li id="linkedIn" class="trackers">&nbsp;&nbsp;<i class="fa fa-linkedin"></i> &nbsp;&nbsp;LinkedIn:</li>
             </ul>
         </div>
         <!-- history of the trackers visit -->
-        <h1 class="subTitle"> History of the trackers visit</h2>
+        <h1 class="subTitle1"> History of the trackers visit</h2>
             <div class="trackers-history">
                 <button class="accordion">Zoom</button>
                 <div class="panel">
