--- a/Track the Trackers/popup.html
+++ b/Track the Trackers/popup.html
@@ -12,12 +12,12 @@
 </head>
 
 <body id="wrapper">
-    <h2 class="mainTitle">Track The Trackers 🧐</h2>
-    <h1 class="subTitle">Current site trackers</h2>
+    <h1 class="mainTitle">Track The Trackers 🧐</h2>
+        <h2 class="subTitle">Current site trackers</h2>
         <div>
             <ul>
                 <!-- tracking or not-tracking -->
-                <li id="zoom" class="trackers">&nbsp; <img src="https://i.imgur.com/xLUhmk5.png" width="20" height="20"> Zoom: </li>
+                <li id="zoom" class="trackers"><img class="zoomIcon" src="https://i.imgur.com/xLUhmk5.png" width="20" height="20">&nbsp; Zoom: </li>
                 <li id="google_analytics" class="trackers">&nbsp; <i class="fa fa-google"></i>&nbsp;&nbsp;Google Analytics:</li>
                 <li id="facebook" class="trackers">&nbsp;&nbsp;<i class="fa fa-facebook"></i>&nbsp;&nbsp;&nbsp; Facebook:</li>
                 <li id="aliexpress" class="trackers">&nbsp;<img src="https://i.imgur.com/zF5Rq9D.png" width="20" height="20"> &nbsp;Aliexpress:</li>
@@ -25,30 +25,30 @@
             </ul>
         </div>
         <!-- history of the trackers visit -->
-        <h1 class="subTitle1"> History of the trackers visit</h2>
-            <div class="trackers-history">
-                <button class="accordion">Zoom</button>
-                <div class="panel">
-                    <ul id="zoom_history"></ul>
-                </div>
-                <button class="accordion">Google Analytics</button>
-                <div class="panel">
-                    <ul id="google_analytics_history">
-                    </ul>
-                </div>
-                <button class="accordion">Facebook</button>
-                <div class="panel">
-                    <ul id="facebook_history"> </ul>
-                </div>
-                <button class="accordion">Aliexpress</button>
-                <div class="panel">
-                    <ul id="aliexpress_history"></ul>
-                </div>
-                <button class="accordion">LinkedIn</button>
-                <div class="panel">
-                    <ul id="linkedIn_history"></ul>
-                </div>
+        <h2 class="subTitle1"> History of the trackers visit</h2>
+        <div class="trackers-history">
+            <button class="accordion">Zoom</button>
+            <div class="panel">
+                <ul id="zoom_history"></ul>
             </div>
+            <button class="accordion">Google Analytics</button>
+            <div class="panel">
+                <ul id="google_analytics_history">
+                </ul>
+            </div>
+            <button class="accordion">Facebook</button>
+            <div class="panel">
+                <ul id="facebook_history"> </ul>
+            </div>
+            <button class="accordion">Aliexpress</button>
+            <div class="panel">
+                <ul id="aliexpress_history"></ul>
+            </div>
+            <button class="accordion">LinkedIn</button>
+            <div class="panel">
+                <ul id="linkedIn_history"></ul>
+            </div>
+        </div>
 </body>
 <footer>
 
